fixed spacing on header and hero banner

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ button {
 }
 
 header {
-    height: 100px;
     display: flex;
     justify-content: space-between;
 }
